# Example CMAKE file for CXX project

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ParallelPi)

#Uncomment to make makefiles verbose
set(CMAKE_VERBOSE_MAKEFILE ON)

OPTION(BUILD_CILK "Build cilk code" ON)
OPTION(BUILD_OPENMP "Build OpenMP code" ON)

if(BUILD_CILK)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPARALLEL_PI_USE_CILK -I ~/.local/include -fcilkplus -lcilkrts")
endif()

if(BUILD_OPENMP)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPARALLEL_PI_USE_OPENMP -fopenmp")
endif()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -DDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -O3")

#Source Code
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# Exe
ADD_EXECUTABLE(parallel_pi ${SOURCE_FILES})
