
FILE(GLOB TEST_SOURCE_FILES "*.cpp")

FOREACH(CURRENT_TEST_SOURCE_FILE ${TEST_SOURCE_FILES})
	GET_FILENAME_COMPONENT(CURRENT_TEST_BINARY ${CURRENT_TEST_SOURCE_FILE} NAME_WE)
	STRING(REPLACE "Test" "" CURRENT_TEST ${CURRENT_TEST_BINARY})
	
	#MESSAGE(ERROR "\nSRC: ${CURRENT_TEST_SOURCE_FILE}\n BIN:${CURRENT_TEST_BINARY}\n TEST:${CURRENT_TEST}\n")

	ADD_EXECUTABLE(${CURRENT_TEST_BINARY} ${CURRENT_TEST_SOURCE_FILE})
	TARGET_LINK_LIBRARIES(${CURRENT_TEST_BINARY} ${PARALLEL_PI_LIB})
	TARGET_INCLUDE_DIRECTORIES(${CURRENT_TEST_BINARY} PUBLIC ${PARALLEL_PI_INCLUDE})

	ADD_TEST(${CURRENT_TEST} ${CURRENT_TEST_BINARY})
	#	SET_TESTS_PROPERTIES(${CURRENT_TEST} PROPERTIES FAIL_REGULAR_EXPRESSION "FAILURE;")
ENDFOREACH()
